tests/Project2/student_test/test_2_s14.out
Error type 6 at Line 8: left side in assignment is rvalue

