tests/Project2/student_test/test_2_s14.spl

int d;
int test_array()
{
	int a;
	int b;
	int c;
	a=b=c=d==a=c==b;
}
